--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Resume made with html and css</title>
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header></header>
+    <main>
+      <section id="hero">
+        <h1>Tomás Gonzalo Peralta Marmlolini</h1>
+        <h2>Frontend Developer</h2>
+      </section>
+      <section id="Skills">
+        <h2>Skills</h2>
+      </section>
+      <section id="contact"></section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
