--- a/index.html
+++ b/index.html
@@ -10,16 +10,7 @@
   </head>
   <body>
     <header></header>
-    <main>
-      <section id="hero">
-        <h1>Tomás Gonzalo Peralta Marmlolini</h1>
-        <h2>Frontend Developer</h2>
-      </section>
-      <section id="Skills">
-        <h2>Skills</h2>
-      </section>
-      <section id="contact"></section>
-    </main>
+    <main></main>
     <footer></footer>
   </body>
 </html>
