se añade fotografía de carpeta de imagenes y se vincula planilla CSS

--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+  <link rel="stylesheet" href="styles.css" />
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+      <img style="width: 200px" src="images\FOTO 1.jpeg" alt="foto de CV" />
+      <h1>Tomás G. Peralta Marmolini</h1>
+      <h2>Frontend Developer</h2>
+    </header>
+    <section>
+      <article>
+        <h2>Personal profile</h2>
+      </article>
+      <aside>Academic Formation</aside>
+    </section>
   </body>
 </html>
