se agrega  paleta de colores a root de css styles

--- a/index.html
+++ b/index.html
@@ -6,20 +6,44 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>CV en html</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <link rel="stylesheet" href="styles.css" />
   <body>
     <header>
       <img style="width: 200px" src="images\FOTO 1.jpeg" alt="foto de CV" />
-      <h1>Tomás G. Peralta Marmolini</h1>
-      <h2>Frontend Developer</h2>
+      <div>
+        <h1>Tomás G. Peralta Marmolini</h1>
+        <h2>agregar titulo</h2>
+      </div>
     </header>
     <section>
       <article>
         <h2>Personal profile</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus
+          iusto architecto delectus debitis, ullam vel, ex provident, sunt ipsum
+          quidem sapiente magni suscipit assumenda quo excepturi esse error
+          repudiandae autem!
+        </p>
       </article>
-      <aside>Academic Formation</aside>
+      <aside>
+        Academic Formation
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto
+          repellat asperiores laudantium voluptatum itaque! Ullam labore
+          necessitatibus sint, dolores similique assumenda! Nemo, consectetur?
+          Non repudiandae perferendis expedita ut nulla fugit!
+        </p>
+      </aside>
+
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto
+        repellat asperiores laudantium voluptatum itaque! Ullam labore
+        necessitatibus sint, dolores similique assumenda! Nemo, consectetur? Non
+        repudiandae perferendis expedita ut nulla fugit!
+      </p>
     </section>
   </body>
 </html>
